# Three-Body-Simulation

./: CMakeLists.txt  README.md  run_build_task.sh  run_cmake.sh
Release/: CMakeCache.txt  Makefile  ThreeBodySim  cmake_install.cmake  compile_commands.json
include/: Body.h
src/: Main.cpp
